# peptacular

./: .coverage  .gitignore  .python-version  .readthedocs.yaml  CHANGELOG.md  CHANGES  CODE_OF_CONDUCT.md  COMPLICANCE_NOTES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  PROFORMA_COMPLIANCE.md  README.md  app.py  compute_hela_average_composition.py  example.py  example_streamlit_components.py  generate_mod_dbs.py  hardware.txt  indexing.py  justfile  profile_mass.py  profile_modbuilder.py  profile_results.prof  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tmp.py
.github/: copilot-instructions.md
.github/workflows/: draft-pdf.yml  pylint.yml  python-package.yml  python-publish.yml
data_gen/: README.md  gen_amino_acids.py  gen_elements.py  gen_fragment_ions.py  gen_monosachs.py  gen_neutral_deltas.py  gen_proteases.py  gen_psimod.py  gen_refmol.py  gen_unimod.py  generate.py  generation_log.txt  utils.py
data_gen/data/: PSI-MOD.obo  additional_monosaccharides.obo  amino_acids.json  fragment_ions.json  monosaccharides.obo  mzpaf_reference_molecules.json  neutral_losses.json  proteases.json  psimod_missing_entries.txt  unimod.obo
docs/: api.rst  conf.py  examples.rst  features.rst  index.rst  masses.rst  proforma_compliance.rst  quickstart.rst
docs/source/: chem.rst  conf.py  digest.rst  fragment.rst  homepage.rst  index.rst  installation.rst  mass.rst  modules.rst  peptacular.chem.rst  peptacular.mods.rst  peptacular.proforma.rst  peptacular.rst  peptacular.sequence.rst  proforma.rst  protein.rst  sequence.rst  spans.rst  term.rst  term_modification.rst  term_residue.rst  tutorials.rst
docs/source/api/: annotation.rst  function.rst  peptacular.rst
docs/source/modules/: examples.rst  getting_started.rst  (+1 more)
examples/: annotation.py  annotation_mod_objects.py  converters.py  digest.py  digest_example.py  digest_fasta_file.py  fragment.py  fragment_example.py  isotope.py  isotope_example.py  mass_example.py  mass_mz_comp.py  modification_example.py  parrallel.py  physiochemical_properties.py  proforma_notation.py  run_all_examples.py  sequence_example.py  speed_test.py
gen_data/: gen_chem_db.py  gen_gno_db.py  gen_monosaccharide_db.py  gen_psi_db.py  gen_resid_db.py  gen_unimod_db.py  gen_xlmod.py  obo.py
gen_data/data/: monosaccharides.obo  unimod.obo  xlmod.obo
gen_output/: create_output_jsons.py
gen_output/output/: amino_acids.json  elements.json  fragment_ions.json  monosaccharides.json  neutral_losses.json  proteases.json  psimodifications.json  refmols.json  unimodifications.json
paper/: paper.bib  paper.md
paper/jats/: paper.jats
peptacular/: constants.py  fasta.py  peptide.py  protein.py  refseq.py  streamlit_components.py  util.py
peptacular-backup/: mzpaf.py  official_mzpaf.py  simple.py  ttest_compress.py
peptacular-backup/booster/: models.py  predictor.py  train.py  utils.py
peptacular-backup/prediction/: psm_utils_core.py
peptacular-backup/spectra/: __init__.py  hill.py  spectrum.py
peptacular-backup/streamlit_ui/: __init__.py
profile/: benchmark_digest.py  benchmark_library.py  benchmark_parser.py  profile_copy.py  profile_debruijn.py  profile_digest.py  profile_mass.py  profile_mass_adv.py  profile_modbuilder.py  profile_parser.py  profile_serializer.py  scaling_test.py  try_benchmark_mem_pyteomics.py  try_benchmark_pyteomics.py
profile_results/: mass_single.prof  mass_single_callers.txt  mass_single_cumulative.txt  mass_single_tottime.txt
src/: lib.rs
src/peptacular/: __init__.py  _spans.py  chem.py  chem_setup.py  chem_util.py  constants.py  converters.py  dataclasses.py  digest.py  digestion.py  element_setup.py  errors.py  example_data.py  fasta.py  fragment.py  fragmentation.py  fragmenter.py  funcs.py  glycan.py  graph.py  input_convert.py  input_parser.py  isotope.py  mass.py  mass_calc.py  mod.py  mod_db.py  peptide.py  proforma_dataclasses.py  protein.py  refseq.py  regex_utils.py  score.py  sequence.py  spans.py  spectra.py  term.py  types.py  util.py  utils.py  (+2 more)
streamlit_apps/: anot_spectra.py  deconvolute.py
tests/: RULES.md  __init__.py  conftest.py  test_annot.py  test_chem.py  test_comp.py  test_compress.py  test_converters.py  test_copy.py  test_decoy.py  test_digest.py  test_doctest.py  test_doctests.py  test_errors.py  test_frag.py  test_fragment.py  test_funcs.py  test_mass.py  test_mass_adv.py  test_mod.py  test_mod_builder.py  test_mod_list.py  test_mzpaf.py  test_mzpaf_fragment.py  test_parallel.py  test_peptide.py  test_proforma.py  test_protein.py  test_randomizer.py  test_realtionship.py  test_refstring.py  test_score.py  test_sequence.py  test_spans.py  test_spectrum.py  ttest_mzpaf.py
tests/test_annotation/: add_mods.py  test_ambiguity.py  test_annotation.py  test_chimeric.py  test_convert_mod_input.py  test_filter.py  test_from_ms2_pip.py  test_join.py  test_pop_mods.py  test_remove.py  test_reverse.py  test_shift.py  test_shuffle.py  test_slice.py  test_sliding_window.py  test_sort.py  test_split.py
tests/test_dclasses/: test_ambiguous_mods.py  test_edge_cases.py  test_element_lookup.py  test_from_string.py  test_global_mods.py  test_mod_parser.py  test_name_parsing.py  test_position_rule.py  test_real_world_examples.py  test_sequence.py  test_string_conversion.py  test_tag_accession.py  test_tag_custom.py  test_tag_formula.py  test_tag_glycan.py  test_tag_info.py  test_tag_mass.py  test_tag_multiple.py  test_tag_name.py  test_unimod_lookup.py
tests/test_proforma_funcs/: add_mods.py  test_ambiguity.py  test_coverage.py  test_filter.py  test_join.py  test_pop_mods.py  test_remove.py  test_reverse.py  test_shift.py  test_shuffle.py  test_slice.py  test_sliding_window.py  test_sort.py  test_split.py
tests/test_property/: test_functional.py  test_mixin.py
(+238 files in other folders)
