[project]
name = "peptacular"
dynamic = ["version"]
description = "A ProForma peptide sequence parser and annotation library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tacular>=1.0.0"]
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.optional-dependencies]
paftacular = ["paftacular>=0.1.0"]
all = ["paftacular>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peptacular"]

[tool.hatch.version]
path = "src/peptacular/__init__.py"

[tool.uv]
package = true
dev-dependencies = [
    "paftacular>=0.1.0",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "pympler>=1.1",
    "pyteomics>=4.7.5",
    "ruff>=0.14.7",
    "pyupgrade>=3.21.0",
    "ty>=0.0.11",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser",
    "lxml>=6.0.2",
    "numpy>=2.4.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 160

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401"]
"data.py" = ["E741"]
"constants.py" = ["E741"]

#[tool.uv.sources]
#tacular = { path = "../tacular", editable = true }
#paftacular = { path = "../paftacular", editable = true }

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]